Wed Mar 11 18:03:38 CST 1998 Larry Ewing  <lewing@gimp.org>

	* app/disp_callbacks.c: added checks to recreate the active tool
	if need be.
 
Wed Mar 11 02:49:14 PST 1998 Manish Singh <yosh@gimp.org>

	* app/fileops.c: no need to hide the help button for fileops,
	since it doesn't exist anymore

Wed Mar 11 02:26:51 PST 1998 Manish Singh <yosh@gimp.org>

	* added animoptimize plugin

Wed Mar 11 00:27:35 PST 1998 Manish Singh <yosh@gimp.org>

	* app/convert.c: fixed memory overrun error

	* app/gdisplay.c
	* app/menus.c: reapplied the tools patch from Nether, looks
	like it doesn't trip up anymore. Added some sanity checks
	anyway

	* app/disp_callbacks.c
	* app/transform_core.c: plugged some harmless build warnings
	
1998-03-11  Larry Ewing  <lewing@discord.isc.tamu.edu>

	* app/undo.c
	* app/gimage.h
	* app/gimage.c: added a simple reference count to the guides so that
	undo does not free them too early...

Tue Mar 10 21:31:21 PST 1998 Manish Singh <yosh@gimp.org>

	* app/interface.c: scrollbars in the drawing area shouldn't
	autofocus

Tue Mar 10 17:09:27 PST 1998 Manish Singh <yosh@gimp.org>

	* app/app_procs.c
	* app/colormaps.c: Do the preview_reset properly this time

Tue Mar 10 00:38:31 PST 1998 Manish Singh <yosh@gimp.org>

	* app/transform_core.c: transform tools add alpha channel
	properly, fixing that really nasty painting bug

Sun Mar  8 17:44:05 PST 1998 Manish Singh <yosh@gimp.org>

	* app/app_procs.c: fix for (install-colormap) and splash screen
	using gtk_preview_reset()

	* configure.in: on some platforms libXmu doesn't require libSM and
	libICE. configure should know this now.

	* app/gradient.c: corrected WM_CLASS typo

	* plug-ins/gfli/gfli.c: fix for load handler magic

	* plug-ins/gtm/gtm.c: don't use naughty gccisms.

	* plug-ins/gqbist
	* plug-ins/maze: updated from registry

Tue Mar  3 01:02:30 1998  Larry Ewing  <lewing@discord.isc.tamu.edu>

	* app/scale.c: Fixed a long standing bug in the scale factor